test/libsolidity/syntaxTests/parsing/mapping_with_names_6.sol
contract test {
    mapping(address uint => bytes32 ipfs) names;
}
// ----
// ParserError 2314: (36-40): Expected '=>' but got 'uint'
